// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components: Tabs BasicUsage renders 1`] = `
<Fragment>
  <h2
    id="basic-usage"
  >
    Basic usage
  </h2>
  <p>
    Add class 
    <CodeTags
      code=".tabs"
      type="secondary"
    />
     to a div containing 
    <CodeTags
      code="<ul>"
      type="primary"
    />
     and nest 
    <CodeTags
      code="<li>"
      type="primary"
    />
     as needed. The tabs component will by default cover the whole width of the container at breakpoint 
    <CodeTags
      code="sm"
      type="secondary"
    />
    . To specify a larger breakpoint, use 
    <CodeTags
      code=".tabs-{breakpoint}"
      type="secondary"
    />
     (see 
    <Link
      to="/docs/core/breakpoints"
    >
      breakpoints
    </Link>
     for more information on breakpoints). Make sure that the tabs will not overflow on screens of normal size. Consider revising the design or the decision to use tabs when more than 3 alternatives are present. If using tabs really is necessary, tabs with scroll might be a more suitable alternative.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Tabs
      id="tabs-example"
      items={
        Array [
          "Card",
          "Discounts",
          "Transactions",
        ]
      }
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Tabs JavascriptMethods renders 1`] = `
<Fragment>
  <h2
    id="javascript-methods"
  >
    JavaScript methods
  </h2>
  <JavascriptDocs
    componentName="tabs"
    others={
      Array [
        [Function],
      ]
    }
  />
</Fragment>
`;

exports[`Components: Tabs TabsScroll renders 1`] = `
<Fragment>
  <h2
    id="tabs-scroll"
  >
    Tabs with scroll
  </h2>
  <p>
    To make tabs more mobile friendly, use class 
    <CodeTags
      code=".tabs-scroll"
      type="secondary"
    />
    . 
    <CodeTags
      code=".tabs-scroll"
      type="secondary"
    />
     will make the tabs scrollable in case of overflow. Note that the scrollable property is not optimized for desktop usage. Consider the usage when 4 or more tabs are present.
  </p>
  <ComponentPreview
    codeFigure={true}
    language="html"
    showCasePanel={true}
  >
    <Tabs
      id="tabs-scroll-example"
      items={
        Array [
          "Card",
          "Discounts",
          "Transactions",
          "Invoice",
          "Settings",
          "Audit trail",
          "History",
        ]
      }
      scroll={true}
      ulId="tabs-scroll-example-ul"
    />
  </ComponentPreview>
</Fragment>
`;

exports[`Components: Tabs renders 1`] = `
<DocContainer
  docToc={true}
>
  <p
    className="lead"
  >
    Use tabs to show which page or section that is active out of several options.
  </p>
  <BasicUsage />
  <TabsScroll />
  <JavascriptMethods />
</DocContainer>
`;
